--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -85,13 +85,13 @@ nav ul li a:hover::before {
 main {
     padding: 2rem;
     margin-top: 100px; /* Distanza dal header */
+    margin-bottom: 80px; /* Spazio per il footer */
     flex: 1;
     max-width: 800px;
     margin: auto;
-    background-color: #fff;
+    background-color: #ffffff;
     box-shadow: 0 0 10px rgba(2, 9, 48, 0.989);
 }
-
 #contact form {
     display: flex;
     flex-direction: column;
@@ -124,13 +124,40 @@ main {
     background-color: #FFC75E;
 }
 
+.social-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px; /* Spazio tra le icone social */
+    margin-top: 40px; /* Distanza dalla sezione contatti */
+    margin-bottom: 80px; /* Spazio tra le icone e il footer */
+}
+
+.social-icon {
+    display: inline-block;
+    width: 50px; /* Dimensione icone */
+    height: 50px; /* Dimensione icone */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transizione per gli effetti */
+}
+
+.social-icon img {
+    width: 100%;
+    height: 100%; /* Rende l'immagine quadrata */
+}
+
+.social-icon:hover {
+    transform: scale(2.1); /* Effetto di ingrandimento al passaggio del mouse */
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.6); /* Ombra al passaggio del mouse */
+}
+
 footer {
-    background-color: #19236a;
+    background-color: #050923;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: relative;
-    width: 100%;
+    position: fixed; /* Fisso in fondo alla pagina */
+    bottom: 0; /* Posizionato in fondo */
+    left: 0; /* Allinea a sinistra */
+    width: 100%; /* Larghezza al 100% */
 }
 
 .hamburger {
